force-app/main/default/objects/tdc_tsw__Drip_Execution__c/tdc_tsw__Drip_Execution__c.object-meta.xml
<CustomObject>
    <label>Drip Execution</label>
    <nameField>
        <label>Drip Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drip Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>