force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__Attachments_Ids__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Attachments_Ids__c</fullName>
    <label>Attachments Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>