force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__IsResponseRecieved__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__IsResponseRecieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsResponseReceived</label>
    <type>Checkbox</type>
</CustomField>