force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__Members_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Members_Type__c</fullName>
    <label>Members Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>