force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__Message_Text__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Message_Text__c</fullName>
    <label>Message Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>