force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__Relate_Incoming_to_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Relate_Incoming_to_Record_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relate Incoming to Record Owner</label>
    <type>Checkbox</type>
</CustomField>