force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__Sender_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Sender_Number__c</fullName>
    <label>Sender Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>