force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__SenderPhonekey__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SenderPhonekey__c</fullName>
    <label>SenderPhonekey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>