force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SMS_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS Template</label>
    <referenceTo>tdc_tsw__Message_Template__c</referenceTo>
    <relationshipLabel>Drip Executions</relationshipLabel>
    <relationshipName>Drip_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>