force-app/main/default/objects/tdc_tsw__Drip_Execution__c/fields/tdc_tsw__Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Succeed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Ready to proceed</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Pause</fullName>
                <isActive>false</isActive>
                <label>Pause</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>